# BranchDB

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  branchdb-run-mac.sh  branchdb-run.cmd  branchdb-run.ps1  branchdb-run.sh  database.h  go.mod  main.go
branchdb-landing-page/: package-lock.json  package.json
branchdb-landing-page/public/: orange-half-bottom-circle.avif
branchdb-landing-page/src/app/: globals.css  layout.tsx  page.tsx
branchdb-landing-page/src/app/docs/: DocsLayout.tsx  page.tsx
branchdb-landing-page/src/app/sdk/: page.tsx
branchdb-landing-page/src/components/: Footer.tsx  Line.tsx  Navbar.tsx
branchdb-landing-page/src/components/docs/: CodeBlock.tsx  CodeSnippet.tsx  (+5 more)
branchdb-landing-page/src/lib/: footer.ts  mainPageData.ts
client/: cli_client.js  client.js
config/: main.go
core/: command_handler.go  parse_command.go  serializeProtocol.go  store.go
include/branchdb/: value_metadata.h
include/branchdb/auth/: auth_handler.h
include/branchdb/cli/: command.h  start_cli.h
include/branchdb/db/: database.h  response_metadata.h  value_metadata.h
include/branchdb/helper/: enum_parser.h  helper.h
include/branchdb/persistent_connect/: persistent_connect.h
include/branchdb/test/: main_test.h
models/: command.go
server/: sync_tcp.go
src/: database.cpp  main.cpp
src/auth/: auth_handler.cpp
src/cli/: start_cli.cpp
src/cli/commands/: auth_command.cpp  del_command.cpp  exists_command.cpp  expire_command.cpp  flush_command.cpp  get_command.cpp  getall_command.cpp  help_command.cpp  info_command.cpp  persist_command.cpp  register_command.cpp  set_command.cpp  ttl_command.cpp
src/db/: response_metadata.cpp  value_metadata.cpp
src/db/auth/: database_auth.cpp
src/db/commands/: database_del.cpp  database_exists.cpp  database_expire.cpp  database_flush.cpp  database_get.cpp  database_getall.cpp  database_info.cpp  database_persist.cpp  database_set.cpp  database_ttl.cpp
src/db/core/: database_core.cpp  response_metadata.cpp
src/db/persistence/: database_persistence.cpp
src/db/threads/: database_threads.cpp
src/helper/: build_serialized_response.cpp  write_response_to_client.cpp
src/persistent_connect/: handle_client.cpp
src/test/: main_test.cpp
(+9 files in other folders)
